[package]
name = "skyline-web"
description = "Utility crate to generate web pages and open the web browser for game modding on Nintendo Switch"
license = "MIT"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>", "Raytwo <raytwost@gmail.com>"]
edition = "2018"

[dependencies]
skyline = "0.2.1"
nnsdk = "0.2.1"
ramhorns = "0.9.4"

# web session json
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["json"]
json = ["serde", "serde_json"]
